# theory-of-opponent-mind

./: .gitignore  README.md  environment.yml  pyproject.toml
runs_sf/doom_duel_v1/: config.json
scripts/: minimal_mp.py  probe_overcooked.py  random_match.py  record_match.py  smoke_test.py  train.py  train_hanabi.py  train_hanabi_lstm.py  train_overcooked.py  train_skrl.py
src/tom/: __init__.py
src/tom/agents/: __init__.py  random_agent.py
src/tom/envs/: __init__.py  hanabi_multi.py  overcooked_multi.py  vec_vizdoom.py  vizdoom_multi.py
src/tom/training/: ippo_hanabi.py  ippo_hanabi_lstm.py  ippo_overcooked.py  ppo.py  skrl_ppo.py
tests/: test_env_smoke.py
