[project]
name = "tom"
version = "0.0.1"
description = "Theory of Opponent Mind — multi-agent ViZDoom RL with opponent modeling"
requires-python = ">=3.11"
dependencies = [
    "vizdoom>=1.3.0",
    "gymnasium>=0.29",
    "pettingzoo>=1.24",
    "numpy>=1.26",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
train = [
    "torch>=2.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tom"]
